--- a/config.json
+++ b/config.json
@@ -1,26 +1,26 @@
 {
   "verbose": true,
-  "firefox_profile": "",
-  "headless": false,
-  "twitter_language": "English",
-  "llm": "gpt4",
-  "image_prompt_llm": "gpt35_turbo",
-  "image_model": "prodia",
-  "threads": 2,
-  "zip_url": "",
+  "firefox_profile": "/content/tools/firefox/profile",
+  "headless": true,
+  "llm": "gpt3.5-turbo",
+  "image_prompt_llm": "gpt3.5-turbo",
+  "twitter_language": "en",
+  "image_model": "stable-diffusion",
+  "threads": 4,
   "is_for_kids": false,
-  "google_maps_scraper": "https://github.com/gosom/google-maps-scraper/archive/refs/tags/v0.9.7.zip",
+  "google_maps_scraper": "",
+  "zip_url": "",
   "email": {
-    "smtp_server": "smtp.gmail.com",
-    "smtp_port": 587,
+    "smtp_server": "",
+    "smtp_port": 0,
     "username": "",
     "password": ""
   },
   "google_maps_scraper_niche": "",
-  "scraper_timeout": 300,
-  "outreach_message_subject": "I have a question...",
-  "outreach_message_body_file": "outreach_message.html",
-  "assembly_ai_api_key": "",
-  "font": "bold_font.ttf",
+  "scraper_timeout": 30,
+  "outreach_message_subject": "",
+  "outreach_message_body_file": "",
+  "assembly_ai_api_key": "e9c253a938184370becdf77f2a9e6a45",
+  "font": "arial.ttf",
   "imagemagick_path": "/usr/bin/convert"
 }
